<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:padding="10dp">
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/nyttig_viden"
            android:textAlignment="center"
            android:textColor="@color/primaryDark"
            android:textSize="30sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="70dp"
        android:layout_below="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/whatsStress"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/information_round"
                android:drawableEnd="@drawable/arrow_right"
                android:paddingStart="10dp"
                android:text="@string/whatIsStrsssButton"
                android:textAlignment="textStart"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/causesStress"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/information_round"
                android:drawableEnd="@drawable/arrow_right"
                android:paddingStart="10dp"
                android:text="@string/whatCausesStrsssButton"
                android:textAlignment="textStart"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/signStress"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/information_round"
                android:drawableEnd="@drawable/arrow_right"
                android:paddingStart="10dp"
                android:text="@string/howDoesStressShowButton"
                android:textAlignment="textStart"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/treatmentStress"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/information_round"
                android:drawableEnd="@drawable/arrow_right"
                android:paddingStart="10dp"
                android:text="@string/treatmentForStressButton"
                android:textAlignment="textStart"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/workStress"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/information_round"
                android:drawableEnd="@drawable/arrow_right"
                android:paddingStart="10dp"
                android:text="@string/stressAndWorkButton"
                android:textAlignment="textStart"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/adviceStress"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/information_round"
                android:drawableEnd="@drawable/arrow_right"
                android:paddingStart="10dp"
                android:text="@string/goodAdviceForTheAffectedPersonsButton"
                android:textAlignment="textStart"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/infoStress"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/information_round"
                android:drawableEnd="@drawable/arrow_right"
                android:paddingStart="10dp"
                android:text="@string/getMoreInfoAboutStressButton"
                android:textAlignment="textStart"
                android:textColor="#ffffff" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>